--- a/package.json
+++ b/package.json
@@ -15,7 +15,13 @@
     "prepare": "npm run clean && npm run build",
     "prepush": "npm run lint && npm test"
   },
-  "repository": "https://github.com/jiayihu/rx-polling",
+  "repository": {
+    "type": "git",	
+    "url": "https://github.com/hmcts/rx-polling"	
+  },	
+  "publishConfig": {	
+    "access": "public"	
+  },
   "keywords": [
     "rxjs",
     "polling",
