--- a/package.json
+++ b/package.json
@@ -15,10 +15,7 @@
     "prepare": "npm run clean && npm run build",
     "prepush": "npm run lint && npm test"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/hmcts/rx-polling.git"
-  },
+  "repository": "https://github.com/jiayihu/rx-polling",
   "publishConfig": {
     "access": "public"
   },
